apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'org.greenrobot.greendao'
apply plugin: 'com.jakewharton.butterknife'

def buildVersion = 1072900
def version = "v1.7.29"

android {
    compileSdkVersion 34
    buildToolsVersion '34.0.0'

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    defaultConfig {
        applicationId "com.vidnroidh.cimoc"
        minSdkVersion 26
        targetSdkVersion 34
        versionCode buildVersion
        versionName version
        resConfigs "en", "zh"
        multiDexEnabled true
    }
    signingConfigs {
        release {
            storeFile file("../hellovr10.jks")
            storePassword '123456'
            keyAlias 'vr'
            keyPassword '123456'
        }
        debug {
            storeFile file("../hellovr10.jks")
            storePassword '123456'
            keyAlias 'vr'
            keyPassword '123456'
        }
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            shrinkResources true
            zipAlignEnabled true
            signingConfig signingConfigs.release
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            shrinkResources false
            zipAlignEnabled false
            signingConfig signingConfigs.debug
        }

        android.applicationVariants.all { variant ->
            variant.outputs.all {
                outputFileName = "Cimoc_" + version + ".apk"
            }
        }
    }

    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
}

greendao {
    schemaVersion 12
}

dependencies {
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.3.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'org.greenrobot:greendao:3.3.0'
    implementation 'com.squareup.okhttp3:okhttp:3.12.3'
    implementation 'com.facebook.fresco:fresco:2.3.0'
    implementation 'org.jsoup:jsoup:1.16.1'
    implementation 'io.reactivex:rxjava:1.3.8'
    implementation 'io.reactivex:rxandroid:1.2.1'
    api 'com.google.guava:guava:27.0.1-android'

    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.alibaba:fastjson:1.2.62'
    implementation "androidx.core:core-ktx:1.6.0"
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.21"
    implementation 'com.github.jenly1314.AppUpdater:app-updater:1.2.0'
    implementation 'com.github.jenly1314.AppUpdater:app-dialog:1.2.0'

}
repositories {
    mavenCentral()
}
